# learn

./: CNAME  Makefile  README.md  auto_push.sh  index.html  vite.config.ts
.github/workflows/: ci.yml
ai/langchain/: demo.py  pyproject.toml
algorithm/complexity/: sum.c
algorithm/leetcode/: .gitignore
algorithm/time_complexity/: sum  sum.js  sum.py
ansible/: 1.txt  123.yaml  Makefile  ansible.cfg  demo-task.yaml  demo.yaml  enter.yaml  entry.yaml  first.yaml  git.yaml  init.yaml  init_task.yaml  inventory  main.yaml  master.sh  pyenv.yaml  ssh-key.yaml  syncTime.yaml
ansible/inventory/: default.yaml
ansible/roles/: entry.yaml
assets/: index-a3d317e9.js
bash/test/: demo.sh  test.sh
c/: Makefile  a.out  demo.c  main.c  module.c  start.sh
c/cproject/: Dockerfile  README.md
c/demo/: main.c
c/include/: a.out  main.c  my.c
c/make/: Makefile
cloud_native/terraform/: main.tf  variables.tf
cpp/: div.c  main  main.c  sub.c
frontend/demo/: README.md
frontend/vanilla/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/vanilla-js/: index.html  package-lock.json  package.json
frontend/vanilla-ts/: package.json
golang/: .gitignore
golang/case/: go.mod  go.sum  main.go
golang/demo/: echo.go  gcd_lcm.go  test.go
golang/leetcode/: test.go
golang/tempconv/: tempconv.go
k8s/helm/: cmd.js
node/: README.md
perl/: config.yaml  demo.pl  main.pl
plang/python/fastapi-demo/: .gitignore  README.md  main.py  pyproject.toml
plang/python/fastapi-demo/frontend/: package.json  vite.config.ts
plang/python/fastapi-demo/frontend/src/: App.tsx
plang/python/rye-example/: pyproject.toml
plang/python/rye-example/src/: demo.py
plang/python/stored_procedures/: README.md  config.toml  populate_database.py  pyproject.toml
plang/python/stored_procedures/src/stored_procedures/: __init__.py
powershell/: README.md
python/: README.md  main.py
(+249 files in other folders)
