[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "eraserandrain", email = "1349291258@qq.com" }
]
dependencies = [
    "fastapi>=0.115.3",
    "uvicorn>=0.32.0",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_demo"]
