[project]
name = "stored-procedures"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "eraserandrain", email = "1349291258@qq.com" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
    "faker>=26.0.0",
    "psycopg2-binary>=2.9.9",
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stored_procedures"]
